--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 body {
-    background-color: chartreuse;
+    background-color: #0e1315;
     text-align: center;
+    font-family: Inconsolata,monospace;
+    color: white;
 }
 
 .table-park {
@@ -13,10 +15,14 @@ body {
 
 .table-park th {
     border: solid 1px black;
-    background: white;
+    background: rgb(233, 213, 37);
+    color: black;
+    padding: 5px;
 }
 
 .table-park td {
     border: solid 1px black;
-    background: white;
+    background: rgb(158, 158, 158);
+    color: rgb(51, 51, 51);
+    padding: 5px;
 }
