--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,32 @@ body {
     text-align: center;
     font-family: Inconsolata,monospace;
     color: white;
+    padding: 0;
+    margin: 0;
 }
 
 header {
     background-color: white;
+}
+
+/* NAVIGATION BAR */
+#nav-logo {
+    width: 5%;
+    padding-top: 2%;
+}
+
+nav h1 {
+    color: black;
+}
+
+#nav-logo {
+    width: 10%;
+    margin-bottom: 0px;
+}
+nav h1 {
+    margin-top: 0px;
+    padding-bottom: 2%;
+    font-size: 1.25rem;
 }
 
 /* TABLE STYLING */
@@ -36,29 +58,31 @@ header {
 /* CCARD STYLING */
 
 .main-container {
-    display: flex;
     justify-content: space-around;
 }
 
 .item {
-    width: 25%;
-    margin-bottom: 10%;
+    width: 65%;
+    margin: 2vh auto;
     border: 2px solid white;
-    padding: 5px;
+    padding: 6px;
     min-width: 327px;
-    background-color: rgb(53, 53, 53);
+    background-color: rgba(53, 53, 53, 0.308);
     border-radius: 10px;
 }
 
 .item img {
+    height: 30vh;
     width: 100%;
-    object-fit: cover;
 }
 
-#nav-logo {
-    width: 5%;
-}
 
-nav h1 {
-    color: black;
+
+@media (min-width: 775px) {
+        .main-container {
+            
+        }
+        .item {
+
+        }
 }
